# arno2b_robot

./: .gitignore  readme.txt  readme_20250904.txt
config_rviz2/: laser_scan_merger.rviz  urg3d_node2.rviz  urg_node2_2lidar.rviz
myscripts/: com_001_test1_urgnode2.bash  com_001_test2_urgnode2.bash  com_003_laser_scan_merger_all.bash  com_build_arno_robot.bash
src/arno_robot/: package.xml  package.xml.org  setup.cfg  setup.cfg.org  setup.py  setup.py.org
src/arno_robot/config/: param_laser_scan_merger.yaml  params_default.yaml  params_yvt.yaml
src/arno_robot/launch/: NG_sensors_2d_base.launch.py  laser_scan_merger_standalone.launch.py  laser_scan_merger_with_urg_node2_2lidar_linked.launch.py  static_transforms.launch.py  urg3d_node2_settingA.launch.py  urg_node2_2lidar.launch.py  urg_node2_2lidar_linked.launch.py
src/arno_robot/resource/: arno_robot
src/laser_scan_merger/: .gitmodules  CMakeLists.txt  README.md  package.xml
src/laser_scan_merger/.git_backup/: config  index  packed-refs
src/laser_scan_merger/.git_backup/logs/refs/remotes/origin/: HEAD
src/laser_scan_merger/.git_backup/objects/pack/: pack-57665de83b389e4190c73ebc638bec897f6a8d1e.idx  pack-57665de83b389e4190c73ebc638bec897f6a8d1e.pack
src/laser_scan_merger/.git_backup/refs/heads/: master
src/laser_scan_merger/config/example/: param.yaml
src/laser_scan_merger/include/laser_scan_merger/: laser_scan_merger.hpp
src/laser_scan_merger/launch/: start.launch.py  start_demo.launch.py
src/laser_scan_merger/rviz/: demo.rviz
src/laser_scan_merger/src/: laser_scan_merger.cpp
src/urg3d_node2/.git_backup/: config  index  packed-refs
src/urg3d_node2/.git_backup/logs/refs/heads/: main
src/urg3d_node2/.git_backup/modules/urg3d_library/: HEAD  config  index  packed-refs
src/urg3d_node2/.git_backup/modules/urg3d_library/logs/: HEAD
src/urg3d_node2/.git_backup/modules/urg3d_library/logs/refs/remotes/origin/: HEAD
src/urg3d_node2/.git_backup/modules/urg3d_library/objects/pack/: pack-28bb11d33e351e3230c6b12847f1e127b00b5b19.idx  pack-28bb11d33e351e3230c6b12847f1e127b00b5b19.pack
src/urg3d_node2/.git_backup/modules/urg3d_library/refs/heads/: main
src/urg3d_node2/.git_backup/objects/pack/: pack-a61deedc171e2c3d7bf0460b91c741ce45391c57.idx  pack-a61deedc171e2c3d7bf0460b91c741ce45391c57.pack
src/urg3d_node2/.git_backup/refs/heads/: main
src/urg_node2/.git_backup/: config  index  packed-refs
src/urg_node2/.git_backup/logs/refs/heads/: main
src/urg_node2/.git_backup/modules/urg_library/: HEAD  config  index  packed-refs
src/urg_node2/.git_backup/modules/urg_library/logs/: HEAD
src/urg_node2/.git_backup/modules/urg_library/logs/refs/heads/: master
src/urg_node2/.git_backup/modules/urg_library/objects/pack/: pack-68abb26b1a8474ea37ce220212e723e51a8581b0.idx  pack-68abb26b1a8474ea37ce220212e723e51a8581b0.pack
src/urg_node2/.git_backup/modules/urg_library/refs/heads/: master
src/urg_node2/.git_backup/objects/pack/: pack-d67f3f931147d898ba3b078bda7f6702d82c8b5e.idx  pack-d67f3f931147d898ba3b078bda7f6702d82c8b5e.pack
src/urg_node2/.git_backup/refs/heads/: main
src/urg_node2/config/: params_ether.yaml  params_ether_2nd.yaml
