[develop]
script_dir=$base/lib/arno_robot
[install]
install_scripts=$base/lib/arno_robot

[metadata]
name = arno_robot
version = 0.0.1

[options]
packages = find:
install_requires =
    setuptools

[options.entry_points]
# console_scripts =
#     my_robot_node = arno_robot.my_robot_node:main

[options.package_data]
* =

[options.data_files]
share/ament_index/resource_index/packages = resource/arno_robot
share/arno_robot = package.xml
share/arno_robot/launch = launch/*.launch.py, launch/*.py
share/arno_robot/config = config/*.yaml
